--- a/git_fix.ipynb
+++ b/git_fix.ipynb
@@ -1,7 +1,59 @@
-%sh
-git status
-git add .
-git commit -m "Initial commit from Databricks"
-git branch -M main
-git remote add origin https://github.com/LidaSemsichko/us-accidents-project.git
-git push -u origin main
+{
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": 0,
+      "metadata": {
+        "application/vnd.databricks.v1+cell": {
+          "cellMetadata": {
+            "byteLimit": 2048000,
+            "rowLimit": 10000
+          },
+          "inputWidgets": {},
+          "nuid": "dae73299-587d-434e-a095-3756f3f14138",
+          "showTitle": false,
+          "tableResultSettingsMap": {},
+          "title": ""
+        }
+      },
+      "outputs": [],
+      "source": [
+        "%sh\n",
+        "git status\n",
+        "git add .\n",
+        "git commit -m \"Initial commit from Databricks\"\n",
+        "git branch -M main\n",
+        "git remote add origin https://github.com/LidaSemsichko/us-accidents-project.git\n",
+        "git push -u origin main\n"
+      ]
+    }
+  ],
+  "metadata": {
+    "application/vnd.databricks.v1+notebook": {
+      "computePreferences": null,
+      "dashboards": [],
+      "environmentMetadata": {
+        "base_environment": "",
+        "environment_version": "4"
+      },
+      "inputWidgetPreferences": null,
+      "language": "python",
+      "notebookMetadata": {
+        "mostRecentlyExecutedCommandWithImplicitDF": {
+          "commandId": 7572670078615886,
+          "dataframes": [
+            "_sqldf"
+          ]
+        },
+        "pythonIndentUnit": 4
+      },
+      "notebookName": "git_fix",
+      "widgets": {}
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
